新增阿里云oss工具以及自动配置包